#3 - Added faker.js as a data source and updates various 'names' endpoints
